2008-04-09 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file_convert.c (transfer_transfer_track): removed
          unnecessary g_mutex_unlock(). Thanks to Klaus Heinz.

2008-03-29  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* configure.in: Remove unused references to libgnomecanvas

	* configure.in: Handle the case where LEX is a path, from
	  NetBSD via Klaus Heinz (fixes SF tracker #1920207)

2008-03-17 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * src/display_photo.c
  * src/misc_input.c
  
    Fix for segfault in get_user_string function.

2007-12-18 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/mp4file.c
	* src/file.c: applied chapterdata patch by Michael Tiffany

2008-01-13 Matvey Kozhev <sikon at users.sourceforge.net>

  * data/gtkpod.glade:
  * src/prefs.c:
  * src/prefsdlg.c:
  * src/file.c:
  
    Support for video thumbnail generation via totem-video-thumbnailer
    (patch by M. Sean Finney <seanius@seanius.net>).

2008-01-06 Matvey Kozhev <sikon at users.sourceforge.net>

  * data/gtkpod.glade:
  * src/display.h:
  * src/display_tracks.c:
  * src/display_sorttabs.c:
  * src/prefsdlg.c:
  
    Made the "Filter tab position" and "Horizontal scrollbar" preferences
    instant-apply.
    
  * data/gtkpod.glade:
  
    The "New Playlist" button is now dropdown.
    
  * configure.in:
  * data/gtkpod-logo.png:
  * data/gtkpod-icon-32.png:
  * data/gtkpod-icon-32-2.png:
  * data/gtkpod-icon-48.png:
  * data/icons/16x16:
  * data/icons/22x22:
  * data/icons/24x24:
  * data/icons/32x32:
  * data/icons/scalable:
  
    More manually tweaked icons, plus the SVG original.

2008-01-06 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * data/gtkpod.glade
    src/display_tracks.c
    src/display.c
    src/display.h
    
    Added a down arrow to end of search bar to hide if not wanted.
    On hide, an up arrow is displayed in the bottom right corner
    of the window.